--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+.pio/
+.vscode/
+build/
+
 BSB_LAN_config.h
 BSB_LAN_custom_defs.h
+BSB_LAN_custom_setup.h
+BSB_LAN_custom_global.h
 BSB_LAN_custom.h
-BSB_LAN/build
