MQTT sensors & Room unit calculation types

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ build_dir=BSB_LAN/build
 lib_dir=BSB_LAN/src
 
 [env]
+platform = espressif32
+framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 board_build.f_flash = 80000000L
@@ -24,6 +26,7 @@ lib_deps =
     h2zero/NimBLE-Arduino
 
 [env:esp32dev]
-platform = espressif32
 board = esp32dev
-framework = arduino
+
+[env:lolind32]
+board = lolin_d32_pro
