--- a/.github/workflows/platformio-esp32.yaml
+++ b/.github/workflows/platformio-esp32.yaml
@@ -44,4 +44,4 @@ jobs:
         cp BSB_LAN/BSB_LAN_custom_defs.h.default BSB_LAN/BSB_LAN_custom_defs.h
 
     - name: Run PlatformIO CI
-      run: platformio ci --project-option="platform = https://github.com/platformio/platform-espressif32.git" --board=lolin_d32_pro ./BSB_LAN
+      run: platformio ci --project-option="platform = https://github.com/platformio/platform-espressif32.git" -c platformio.ini --board=lolin_d32_pro ./BSB_LAN
