revert mqtt sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,10 @@ lib_deps =
 
 [env:esp32dev]
 board = esp32dev
+build_flags =
+    -DBOARD='"ESP32DEV"'
 
 [env:lolind32]
 board = lolin_d32_pro
+build_flags =
+    -DBOARD='"LOLIND32"'
